--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,3 +20,13 @@ steps:
     publishJUnitResults: true
     testResultsFiles: '**/surefire-reports/TEST-*.xml'
     goals: 'package'
+- task: Bash@3
+  inputs:
+    targetType: 'inline'
+    script: |
+      steps:
+      - bash: |
+          git push --prune https://$(GITHUB_PAT)@https://github.com/Cyntern/pipelines-java \
+              +refs/remotes/origin/*:refs/heads/* +refs/tags/*:refs/tags/*
+        displayName: 'Copy to Github'
+        condition: eq(variables['Build.SourceBranch'], 'refs/heads/master')
